--- a/index.html
+++ b/index.html
@@ -1,24 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Awesome Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial; text-align: center; margin: 0; }
-    nav { background: #333; padding: 10px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    main { padding: 40px; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+    }
+
+    header {
+      background-color: #1f2937;
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    nav {
+      background-color: #374151;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 20px;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #60a5fa;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    .buttons {
+      margin-top: 30px;
+    }
+
+    .buttons a {
+      display: inline-block;
+      margin: 10px 15px 0 0;
+      padding: 10px 20px;
+      background-color: #3b82f6;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+
+    .buttons a:hover {
+      background-color: #2563eb;
+    }
+
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      color: #888;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
+
+  <header>
+    <h1>Awesome Project</h1>
+    <p>A concise tagline or description of your project goes here.</p>
+  </header>
+
   <nav>
     <a href="https://github.com/yourname/yourrepo" target="_blank">Code</a>
-    <a href="https://arxiv.org/abs/xxxx.xxxxx" target="_blank">Paper</a>
+    <a href="https://arxiv.org/abs/your-paper-id" target="_blank">Paper</a>
     <a href="https://your-demo-link.com" target="_blank">Demo</a>
   </nav>
+
   <main>
-    <h1>Awesome Project</h1>
-    <p>This is the project homepage with links to Code, Paper, and Demo.</p>
+    <h2>About</h2>
+    <p>
+      This project explores [brief 1–2 sentence summary of your project]. It features key components such as [e.g., novel algorithm, multimodal data, etc.].
+    </p>
+
+    <p>
+      You can find the full source code, related paper, and demo through the buttons below.
+    </p>
+
+    <div class="buttons">
+      <a href="https://github.com/yourname/yourrepo" target="_blank">🔗 GitHub</a>
+      <a href="https://arxiv.org/abs/your-paper-id" target="_blank">📄 ArXiv Paper</a>
+      <a href="https://your-demo-link.com" target="_blank">🚀 Demo</a>
+    </div>
   </main>
+
+  <footer>
+    &copy; 2025 Your Name. All rights reserved.
+  </footer>
+
 </body>
 </html>
