--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </header>
 
   <nav>
-    <a href="https://github.com/yourname/yourrepo" target="_blank">Code</a>
+    <a href="https://github.com/CaesarrrrLyb/Visual-Reasoning-and-Retroduction" target="_blank">Code</a>
     <a href="https://arxiv.org/abs/your-paper-id" target="_blank">Paper</a>
     <a href="https://your-demo-link.com" target="_blank">Demo</a>
   </nav>
