--- a/index.html
+++ b/index.html
@@ -2,113 +2,129 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Awesome Project</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f7fa;
-      color: #333;
-    }
-
-    header {
-      background-color: #1f2937;
-      padding: 20px;
+      font-family: 'Inter', sans-serif;
+      background-color: #fff;
+      color: #111;
       text-align: center;
-      color: white;
+      padding: 40px 20px;
     }
 
-    nav {
-      background-color: #374151;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #60a5fa;
-    }
-
-    main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
+    .logo {
+      max-width: 100px;
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin: 0.5em 0 0.2em;
     }
 
-    .buttons {
-      margin-top: 30px;
+    h2 {
+      font-style: italic;
+      font-weight: 400;
+      color: #333;
+      margin: 0.2em 0 1em;
+    }
+
+    .authors {
+      font-size: 1rem;
+      color: #1d4ed8;
+      margin-bottom: 0.5em;
+    }
+
+    .affiliations {
+      font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 1em;
+    }
+
+    .conference {
+      font-size: 1.1rem;
+      font-weight: bold;
+      margin-bottom: 1.5em;
     }
 
     .buttons a {
       display: inline-block;
-      margin: 10px 15px 0 0;
-      padding: 10px 20px;
-      background-color: #3b82f6;
+      padding: 12px 24px;
+      margin: 0 10px;
+      background-color: #1f2937;
       color: white;
+      border-radius: 9999px;
+      font-weight: 600;
       text-decoration: none;
-      border-radius: 5px;
       transition: background-color 0.3s;
     }
 
     .buttons a:hover {
-      background-color: #2563eb;
+      background-color: #4b5563;
+    }
+
+    .section {
+      max-width: 800px;
+      margin: 50px auto 0;
+      text-align: left;
+    }
+
+    .section h3 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5em;
+    }
+
+    .section p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
     }
 
     footer {
       margin-top: 60px;
-      text-align: center;
+      font-size: 0.9rem;
       color: #888;
-      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Awesome Project</h1>
-    <p>A concise tagline or description of your project goes here.</p>
-  </header>
+  <!-- Optional logo image -->
+  <!-- <img src="your_logo.png" alt="Logo" class="logo"> -->
 
-  <nav>
-    <a href="https://github.com/CaesarrrrLyb/VfRrR" target="_blank">Code</a>
-    <a href="https://arxiv.org/abs/your-paper-id" target="_blank">Paper</a>
-    <a href="https://your-demo-link.com" target="_blank">Demo</a>
-  </nav>
+  <h1>Visual Reasoning and Retroduction</h1>
+  <h2>Subtitle or Tagline Goes Here</h2>
 
-  <main>
-    <h2>About</h2>
+  <div class="authors">
+    Author One<sup>1*</sup>, Author Two<sup>1</sup>, Author Three<sup>2</sup>
+  </div>
+  <div class="affiliations">
+    <sup>1</sup>University A &nbsp;&nbsp;
+    <sup>2</sup>Institute B &nbsp;&nbsp;
+    *Equal Contribution
+  </div>
+
+  <div class="conference">Conference Name 2025 (Highlight)</div>
+
+  <div class="buttons">
+    <a href="#" target="_blank">📄 Paper</a>
+    <a href="#" target="_blank">💻 Code</a>
+  </div>
+
+  <div class="section">
+    <h3>About</h3>
     <p>
-      This project explores [brief 1–2 sentence summary of your project]. It features key components such as [e.g., novel algorithm, multimodal data, etc.].
+      This is a placeholder for your project introduction. You can write a few sentences to explain the motivation, key idea, and contributions of your work.
     </p>
-
-    <p>
-      You can find the full source code, related paper, and demo through the buttons below.
-    </p>
-
-    <div class="buttons">
-      <a href="https://github.com/yourname/yourrepo" target="_blank">🔗 GitHub</a>
-      <a href="https://arxiv.org/abs/your-paper-id" target="_blank">📄 ArXiv Paper</a>
-      <a href="https://your-demo-link.com" target="_blank">🚀 Demo</a>
-    </div>
-  </main>
+  </div>
 
   <footer>
-    &copy; 2025 Your Name. All rights reserved.
+    &copy; 2025 Your Name(s). All rights reserved.
   </footer>
 
 </body>
