--- a/index.html
+++ b/index.html
@@ -98,15 +98,14 @@
   <!-- <img src="your_logo.png" alt="Logo" class="logo"> -->
 
   <h1>Visual Reasoning and Retroduction</h1>
-  <h2>Subtitle or Tagline Goes Here</h2>
+  <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm for Visual Reasoning and Retroduction</h2>
 
   <div class="authors">
-    Author One<sup>1*</sup>, Author Two<sup>1</sup>, Author Three<sup>2</sup>
+    Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Kuangrong Hao<sup>1</sup>
   </div>
   <div class="affiliations">
-    <sup>1</sup>University A &nbsp;&nbsp;
-    <sup>2</sup>Institute B &nbsp;&nbsp;
-    *Equal Contribution
+    <sup>1</sup>Donghua University A &nbsp;&nbsp;
+    *Corresponding author
   </div>
 
   <div class="conference">Conference Name 2025 (Highlight)</div>
