--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Kuangrong Hao<sup>1</sup>
   </div>
   <div class="affiliations">
-    <sup>1</sup>Donghua University A &nbsp;&nbsp;
+    <sup>1</sup>Donghua University &nbsp;&nbsp;
     *Corresponding author
   </div>
 
@@ -112,7 +112,7 @@
 
   <div class="buttons">
     <a href="#" target="_blank">📄 Paper</a>
-    <a href="#" target="_blank">💻 Code</a>
+    <a href="https://github.com/CaesarrrrLyb/VfRrR" target="_blank">💻 Code</a>
   </div>
 
   <div class="section">
