--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- <img src="your_logo.png" alt="Logo" class="logo"> -->
 
   <h1>Visual Reasoning and Retroduction</h1>
-  <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm for Visual Reasoning and Retroduction</h2>
+  <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm</h2>
 
   <div class="authors">
     Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Kuangrong Hao<sup>1</sup>
