--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Title</title>
+  <title>Visual Reasoning and Retroduction</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,18 +13,20 @@
       background-color: #fff;
       color: #111;
       text-align: center;
-      padding: 40px 20px;
+      padding: 50px 20px;
+      font-size: 20px; 
+      line-height: 1.8; 
     }
 
     .logo {
       max-width: 100px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 3rem; 
       font-weight: 700;
-      margin: 0.5em 0 0.2em;
+      margin: 0.6em 0 0.3em;
     }
 
     h2 {
@@ -32,35 +34,37 @@
       font-weight: 400;
       color: #333;
       margin: 0.2em 0 1em;
+      font-size: 1.8rem;
     }
 
     .authors {
-      font-size: 1rem;
+      font-size: 1.2rem;
       color: #1d4ed8;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.8em;
     }
 
     .affiliations {
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       color: #555;
-      margin-bottom: 1em;
+      margin-bottom: 1.2em;
     }
 
     .conference {
-      font-size: 1.1rem;
+      font-size: 1.4rem;
       font-weight: bold;
-      margin-bottom: 1.5em;
+      margin-bottom: 2em;
     }
 
     .buttons a {
       display: inline-block;
-      padding: 12px 24px;
-      margin: 0 10px;
+      padding: 14px 28px;
+      margin: 0 15px;
       background-color: #1f2937;
       color: white;
       border-radius: 9999px;
       font-weight: 600;
       text-decoration: none;
+      font-size: 1.1rem;
       transition: background-color 0.3s;
     }
 
@@ -69,25 +73,25 @@
     }
 
     .section {
-      max-width: 800px;
-      margin: 50px auto 0;
+      max-width: 900px;
+      margin: 60px auto 0;
       text-align: left;
     }
 
     .section h3 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5em;
+      font-size: 2rem;
+      margin-bottom: 0.6em;
     }
 
     .section p {
-      font-size: 1rem;
-      line-height: 1.6;
+      font-size: 1.2rem;
+      line-height: 2; /* 增加段落行距 */
       color: #333;
     }
 
     footer {
-      margin-top: 60px;
-      font-size: 0.9rem;
+      margin-top: 80px;
+      font-size: 1rem;
       color: #888;
     }
   </style>
