--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     .section p {
       font-size: 1.2rem;
-      line-height: 2; /* 增加段落行距 */
+      line-height: 2; 
       color: #333;
     }
 
