--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
       line-height: 1.6;
     }
 
-    .logo {
-      max-width: 100px;
-      margin-bottom: 30px;
-    }
-
     h1 {
       font-size: 2.5rem;
       font-weight: 700;
@@ -72,6 +67,18 @@
       background-color: #4b5563;
     }
 
+    .preview-image {
+      margin: 50px auto 40px;
+      text-align: center;
+    }
+
+    .preview-image img {
+      max-width: 80%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
     .section {
       max-width: 900px;
       margin: 50px auto 0;
@@ -98,9 +105,6 @@
 </head>
 <body>
 
-  <!-- Optional logo image -->
-  <!-- <img src="your_logo.png" alt="Logo" class="logo"> -->
-
   <h1>Visual Reasoning and Retroduction</h1>
   <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm</h2>
 
@@ -117,6 +121,10 @@
   <div class="buttons">
     <a href="#" target="_blank">📄 Paper</a>
     <a href="https://github.com/CaesarrrrLyb/VfRrR" target="_blank">💻 Code</a>
+  </div>
+
+  <div class="preview-image">
+    <img src="example.jpg" alt="Project Preview">
   </div>
 
   <div class="section">
