--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </div>
 
   <div class="preview-image">
-    <img src="example.jpg" alt="Project Preview">
+    <img src="intro_fig/intro_fig.png" alt="Project Preview">
   </div>
 
   <div class="section">
