--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     .buttons a {
       display: inline-block;
       padding: 12px 24px;
-      margin: 0 12px;
+      margin: 0 10px;
       background-color: #1f2937;
       color: white;
       border-radius: 9999px;
@@ -68,12 +68,12 @@
     }
 
     .preview-image {
-      margin: 50px auto 40px;
+      margin: 40px auto 30px;
       text-align: center;
     }
 
     .preview-image img {
-      max-width: 80%;
+      max-width: 60%; /* 缩小图片宽度 */
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -121,6 +121,7 @@
   <div class="buttons">
     <a href="#" target="_blank">📄 Paper</a>
     <a href="https://github.com/CaesarrrrLyb/VfRrR" target="_blank">💻 Code</a>
+    <a href="#" target="_blank">📷 Example</a>
   </div>
 
   <div class="preview-image">
