--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     }
 
     .preview-image img {
-      max-width: 60%; /* 缩小图片宽度 */
+      max-width: 40%; 
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
