--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
       background-color: #4b5563;
     }
 
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
     .preview-image {
-      margin: 40px auto 30px;
+      margin: 40px 0 30px;
       text-align: center;
     }
 
     .preview-image img {
-      max-width: 20%; 
+      width: 100%;
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .section {
-      max-width: 900px;
-      margin: 50px auto 0;
-      text-align: left;
     }
 
     .section h3 {
@@ -124,15 +124,17 @@
     <a href="#" target="_blank">📷 Example</a>
   </div>
 
-  <div class="preview-image">
-    <img src="intro_fig/intro_fig.png" alt="Project Preview">
-  </div>
+  <div class="container">
+    <div class="preview-image">
+      <img src="intro_fig/intro_fig.png" alt="Project Preview">
+    </div>
 
-  <div class="section">
-    <h3>About</h3>
-    <p>
-      This is a placeholder for your project introduction. You can write a few sentences to explain the motivation, key idea, and contributions of your work.
-    </p>
+    <div class="section">
+      <h3>About</h3>
+      <p>
+        This is a placeholder for your project introduction. You can write a few sentences to explain the motivation, key idea, and contributions of your work.
+      </p>
+    </div>
   </div>
 
   <footer>
