--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     *Corresponding author
   </div>
 
-  <div class="conference">Conference Name 2025 (Highlight)</div>
+<!--   <div class="conference">Conference Name 2025 (Highlight)</div> -->
 
   <div class="buttons">
     <a href="#" target="_blank">📄 Paper</a>
