--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Your Name(s). All rights reserved.
+    &copy; 2025 Yubing Li. All rights reserved.
   </footer>
 
 </body>
