--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm</h2>
 
   <div class="authors">
-    Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Kuangrong Hao<sup>1</sup>
+    Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Mingbo Zhao<sup>1</sup>
   </div>
   <div class="affiliations">
     <sup>1</sup>Donghua University &nbsp;&nbsp;
