--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     </div>
 
     <div class="section">
-      <h3>About</h3>
+      <h3>Abstract</h3>
       <p>
-        This is a placeholder for your project introduction. You can write a few sentences to explain the motivation, key idea, and contributions of your work.
+        Multimodal Large Language Models (MLLMs) have demonstrated promising capabilities in visual reasoning tasks. However, their capabilities of intelligence and comprehension are more plausibly driven by the exploitation of statistical correlations rather than by genuine deep understanding. To address this limitation and investigate the intrinsic reasoning capabilities of AI models, we propose a dedicated task: Visual Reasoning and Retroduction (VRR). This task unifies forward reasoning and backward retroduction into a novel inference paradigm that requires deducing the most plausible future or past event. To support this task, we construct EPIC (Peppa Logic), a dataset specifically designed for logical inference. It includes scenario sequences, corresponding text descriptions, and explicit cause and aftermath annotations of each scenario. In addition, inspired by human cognitive behavior, a bio-inspired model called ScenarioInfer was developed motivated by the neural responses of the parahippocampal place area and retrosplenial complex during reasoning. Experimental results on both open-world and enclosed-world datasets demonstrate that our proposed model achieves state-of-the-art performance on VRR, outperforming the latest MLLMs. This new paradigm not only advances the field of visual reasoning but also provides a robust foundation for exploring logical reasoning in AI systems.
       </p>
     </div>
   </div>
