--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     <div class="section">
       <h3>Data Privacy Statement</h3>
       <p>
-        The data collected and utilized in this study are strictly for non-commercial, scientific research purposes only.  Under no circumstances will they be used for any commercial activities, marketing, advertising, or other profit-driven endeavors.  All data handling and analysis are conducted solely to advance the research objectives outlined herein, ensuring compliance with ethical standards regarding data confidentiality and participant privacy.      </p>
+        The data collected and utilized in this study are strictly for non-commercial, scientific research purposes only.  Under no circumstances will they be used for any commercial activities, marketing, advertising, or other profit-driven endeavors.  All data handling and analysis are conducted solely to advance the research objectives outlined herein, ensuring compliance with ethical standards regarding data confidentiality and participant privacy.      
+      </p>
     </div>
   </div>
 
