--- a/index.html
+++ b/index.html
@@ -109,11 +109,10 @@
   <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm</h2>
 
   <div class="authors">
-    Yubing Li<sup>1</sup>, Xuesong Tang<sup>1*</sup>, Mingbo Zhao<sup>1</sup>
+    Yubing Li<sup>1</sup>, Xuesong Tang<sup>1</sup>, Mingbo Zhao<sup>1</sup>
   </div>
   <div class="affiliations">
     <sup>1</sup>Donghua University &nbsp;&nbsp;
-    *Corresponding author
   </div>
 
   <div class="conference"></div>
