--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
   <h1>Visual Reasoning and Retroduction</h1>
-  <h2>Deep Understanding in Cartoon Scenarios: Redefining Inference Paradigm</h2>
+  <h2>Redefining Inference Paradigm in Cross-Modal Scenarios</h2>
 
   <div class="authors">
     Yubing Li<sup>1</sup>, Xuesong Tang<sup>1</sup>, Mingbo Zhao<sup>1</sup>
